--- a/planes.html
+++ b/planes.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Planes</title>
+<title>Planes | ZenSite</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -28,14 +28,7 @@ header{
   z-index:1000;
 }
 
-/* LOGO */
-.logo{
-  font-weight:800;
-  font-size:18px;
-  margin-right:20px;
-}
-
-/* MENU */
+/* MENU LEFT */
 nav{
   display:flex;
   gap:18px;
@@ -50,7 +43,7 @@ nav a{
 
 nav a:hover{opacity:1}
 
-/* LANG SWITCH */
+/* LANG RIGHT */
 .lang{
   margin-left:auto;
   display:flex;
@@ -149,8 +142,6 @@ h1{
 <body>
 
 <header>
-  <div class="logo">ZenSite</div>
-
   <nav>
     <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
     <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
